[gd_scene load_steps=8 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]
[ext_resource type="Script" path="res://scenes/Deadzone.gd" id="5_etake"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k08bf"]
size = Vector2(1434, 77.5)

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
lock_rotation = true

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("1")

[node name="DeadzoneArea" type="Area2D" parent="."]
position = Vector2(-118, 603)
script = ExtResource("5_etake")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadzoneArea"]
position = Vector2(688, 148)
shape = SubResource("RectangleShape2D_k08bf")

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="DeadzoneArea" to="DeadzoneArea" method="_on_DeadzoneArea_body_exited"]
